After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703406 - GtkSearchBar does not automatically connect entry
GtkSearchBar does not automatically connect entry
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-07-01 17:31 UTC by Garrett Regier
Modified: 2013-07-04 10:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkSearchBar: Fix automatic entry connection (1.28 KB, patch)
2013-07-01 17:47 UTC, Bastien Nocera
none Details | Review
GtkSearchBar: Fix automatic entry connection (1.20 KB, patch)
2013-07-03 14:20 UTC, Bastien Nocera
committed Details | Review

Description Garrett Regier 2013-07-01 17:31:31 UTC
In the comments of the code it says that it is supposed to.
Comment 1 Bastien Nocera 2013-07-01 17:47:17 UTC
Created attachment 248172 [details] [review]
GtkSearchBar: Fix automatic entry connection

Adding an entry to the search bar didn't automatically connect
the signals as expected as the code was in the wrong branch.
Comment 2 Bastien Nocera 2013-07-03 14:20:44 UTC
Created attachment 248314 [details] [review]
GtkSearchBar: Fix automatic entry connection

Adding an entry to the search bar didn't automatically connect
the signals as expected as the code was in the wrong branch.
Comment 3 Matthias Clasen 2013-07-03 19:14:49 UTC
Review of attachment 248314 [details] [review]:

om
Comment 4 Bastien Nocera 2013-07-04 10:54:08 UTC
Attachment 248314 [details] pushed as fa6a137 - GtkSearchBar: Fix automatic entry connection